--- a/django_app/frontend/src/styles.scss
+++ b/django_app/frontend/src/styles.scss
@@ -173,7 +173,6 @@ upload-button {
 .govuk-footer__copyright-logo {
   display: inline-block;
   min-width: 125px;
-  padding-top: 112px;
   background-image: url(/static/govuk-frontend/assets/images/govuk-crest.png);
   background-repeat: no-repeat;
   background-position: 50% 0;
